--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon --config nodemon.json",
+    "compile": "tsc -p tsconfig.json",
+    "clean": "rimraf ./build",
+    "build": "npm run clean && npm run compile",
+    "start": "npm run build && node/index.js",
+    "lint:check": "biome check .",
+    "lint:fix": "biome check --write --unsafe .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +29,15 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@biomejs/biome": "^2.3.4",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.5",
+    "@types/express-serve-static-core": "^5.1.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/socket.io": "^3.0.1",
+    "nodemon": "^3.1.10",
+    "rimraf": "^6.1.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
