--- a/backend/package.json
+++ b/backend/package.json
@@ -18,22 +18,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
-    "cookie-parser": "^1.4.7",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.18.2",
     "mongoose": "^8.15.0",
+    "redis": "^5.9.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.4",
-    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
     "@types/express-serve-static-core": "^5.1.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
     "rimraf": "^6.1.0",
